--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -18,6 +18,7 @@
         android:textSize="25sp" />
 
     <CheckBox
+        android:id="@+id/contact_check"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"/>
 </LinearLayout>
