--- a/app/src/main/res/layout/fragment_create_group.xml
+++ b/app/src/main/res/layout/fragment_create_group.xml
@@ -133,7 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="204dp"
         android:layout_marginEnd="16dp"
-        android:text="Import Contacts \n From Phone"
+        android:text="Get From Phone"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -181,11 +181,12 @@
 
     <TextView
         android:id="@+id/contactList"
-        android:layout_width="311dp"
+        android:layout_width="match_parent"
         android:layout_height="111dp"
         android:text="TextView"
         android:textColor="@color/colorPrimary"
         android:textSize="22dp"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.16"
