--- a/app/src/main/res/layout/fragment_create_group.xml
+++ b/app/src/main/res/layout/fragment_create_group.xml
@@ -8,19 +8,18 @@
     tools:context=".CreateGroupFragment"
     android:background="@color/colorBackground">
 
-    <ImageButton
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/groupPhotoAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/add_photo_icon"
-        android:maxWidth="88dp"
-        android:maxHeight="39dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:src="@drawable/add_photo_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.043"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.025" />
+
 
     <TextView
         android:id="@+id/textView6"
@@ -45,10 +44,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.078"
+        app:layout_constraintHorizontal_bias="0.034"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.132" />
+        app:layout_constraintVertical_bias="0.126" />
 
     <TextView
         android:id="@+id/textView2"
@@ -65,12 +64,12 @@
         app:layout_constraintVertical_bias="0.202" />
 
     <EditText
-        android:id="@+id/group_name"
-        android:layout_width="375dp"
+        android:id="@+id/group_name_label"
+        android:layout_width="match_parent"
         android:layout_height="66dp"
-        android:layout_marginHorizontal="25dp"
-        android:inputType="text"
+        android:layout_marginEnd="25dp"
         android:gravity="bottom|left"
+        android:inputType="text"
         android:maxLength="57"
         android:textColor="#bacdd9"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,11 +81,10 @@
 
     <EditText
         android:id="@+id/group_description1"
-        android:layout_width="375dp"
+        android:layout_width="match_parent"
         android:layout_height="66dp"
-        android:layout_marginHorizontal="25dp"
         android:layout_marginTop="240dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="25dp"
         android:gravity="bottom|left"
         android:inputType="textCapSentences|textMultiLine"
         android:lines="2"
@@ -95,7 +93,7 @@
         android:textColor="#bacdd9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.875"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -119,6 +117,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="160dp"
+        android:scrollbars="vertical"
         android:text="Contact List"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
