--- a/app/src/main/res/layout/fragment_contact_page.xml
+++ b/app/src/main/res/layout/fragment_contact_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,25 +10,18 @@
     android:id="@+id/fragment_contacts_page"
     tools:context=".GroupsPage">
 
-    <TextView
-        android:textAlignment="center"
-        android:layout_width="match_parent"
+    <com.google.android.material.button.MaterialButton
+        android:layout_gravity="end"
+        android:id="@+id/done_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimary"
-        android:textSize="44dp"
-        android:text="Contacts" />
+        android:text="ADD"
+        app:icon="@drawable/ic_add_black_24dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/contact_recycler"
         android:layout_width="match_parent"
-        android:layout_height="419dp"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/contacts"
         android:scrollbars="vertical" />
-
-    <Button
-        android:id="@+id/done_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="DONE"/>
-
-
 </LinearLayout>
