--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -10,7 +10,8 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="259dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="match_parent"
         android:layout_marginStart="15dp"
         android:gravity="fill"
