--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,13 +8,13 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.example.timehunter.MainFragment"
-        android:label="MainFragment" >
+        android:label=" " >
     </fragment>
 
     <fragment
         android:id="@+id/groupsPageFragment"
         android:name="com.example.timehunter.GroupsPage"
-        android:label="Groups_page" >
+        android:label="Groups" >
         <action
             android:id="@+id/action_groupsPageFragment_to_viewGroupFragment"
             app:destination="@id/viewGroupFragment" />
@@ -23,7 +23,7 @@
     <fragment
         android:id="@+id/createGroupFragment"
         android:name="com.example.timehunter.CreateGroupFragment"
-        android:label="create_group"
+        android:label="Create A Group"
         tools:layout="@layout/fragment_create_group" >
         <action
             android:id="@+id/action_createGroupFragment_to_viewGroupFragment"
@@ -37,6 +37,9 @@
         <action
             android:id="@+id/action_createGroupFragment_to_confrimGroup3"
             app:destination="@id/confrimGroup" />
+        <action
+            android:id="@+id/action_createGroupFragment_to_contactsPage2"
+            app:destination="@id/contactsPage2" />
     </fragment>
 
     <action android:id="@+id/action_global_mainFragment"
@@ -50,7 +53,7 @@
     <fragment
         android:id="@+id/viewGroupFragment"
         android:name="com.example.timehunter.ViewGroupFragment"
-        android:label="ViewGroupFragment" >
+        android:label="" >
         <action
             android:id="@+id/action_viewGroupFragment_to_createGroupFragment"
             app:destination="@id/createGroupFragment"
@@ -60,7 +63,7 @@
     <fragment
         android:id="@+id/confrimGroup"
         android:name="com.example.timehunter.ConfrimGroup"
-        android:label="confirm_group"
+        android:label="Confirm New Group"
         tools:layout="@layout/confirm_group" >
         <action
             android:id="@+id/action_confrimGroup_to_groupsPageFragment"
@@ -74,6 +77,6 @@
     <fragment
         android:id="@+id/contactsPage2"
         android:name="com.example.timehunter.ContactsPage"
-        android:label="ContactsPage" />
+        android:label="Contacts" />
 
 </navigation>
