--- a/app/src/main/res/layout/fragment_create_group.xml
+++ b/app/src/main/res/layout/fragment_create_group.xml
@@ -105,6 +105,14 @@
                 android:text="Get From Phone" />
         </LinearLayout>
 
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Group Members"
+            android:textSize="24dp"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimary"/>
         <TextView
             android:id="@+id/contactList"
             android:layout_width="match_parent"
