--- a/app/src/main/res/layout/fragment_groups_page.xml
+++ b/app/src/main/res/layout/fragment_groups_page.xml
@@ -9,15 +9,9 @@
     android:layout_marginEnd="20dp"
     tools:context=".GroupsPage">
 
-    <TextView
-        android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="@dimen/notification_icon_size"
-        android:text="Groups" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/groups"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
